Closed Bug 178989 Opened 22 years ago Closed 22 years ago

sometimes records are not added to Palm

Categories

(MailNews Core Graveyard :: Palm Sync, defect)

x86
Windows NT
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2final

People

(Reporter: rdayal, Assigned: rdayal)

References

Details

Attachments

(1 file)

Sometimes records from Mozilla AB are not added into Palm. This is seen during external Mozilla testing as reported in bug #155417.
This could be reproduced using a earlier Palm version like 3.0 or earlier. This is happening because one of the SyncWriteResourceRec returns operation not supported. Basically, the Address Book database is a record database and not a resource database and thus for Address Book sync the m_bRecordDB should be set as TRUE. This will make sure to call the SyncWriteRec and thus addition would always work.
This fix guarantees that it always works for all Palm handhelds.
Comment on attachment 105517 [details] [diff] [review] patch to fix this problem r=ssu
Attachment #105517 - Flags: review+
Tested and verified using a release build on 11/7/02, this is now working correctly!
Severity: normal → major
Target Milestone: --- → mozilla1.2final
Comment on attachment 105517 [details] [diff] [review] patch to fix this problem sr=bienvenu
Attachment #105517 - Flags: superreview+
Comment on attachment 105517 [details] [diff] [review] patch to fix this problem a=asa for checkin to the 1.2 branch (on behalf of drivers)
Attachment #105517 - Flags: approval+
Blocks: 155417
The fix for this has already landed (Fri 11/8) on to the 1.2 branch and trunk. Marking this as fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Trunk build 2003-02-20: WinXP Verified Fixed. This has been fixed for awhile.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
Product: MailNews Core → MailNews Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: