Bug #178989 Sometimes records are not added into Palm

The fix sets the flag that makes sure to call the correct API.

r=ssu, sr=bienvenu, a=asa.

The fix has been verified by QA using a release test build.